--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -7,6 +7,7 @@
   "module": "true",
   "scripts": {
     "build": "tsc --project ./",
+    "dev": "yarn build && ts-node ./build/src/cli.js",
     "start": "ts-node ./build/src/cli.js"
   },
   "dependencies": {
@@ -34,7 +35,8 @@
     "@polkadot/x-textdecoder": "7.8.2",
     "@polkadot/x-textencoder": "7.8.2",
     "@polkadot/x-randomvalues": "7.8.2",
-    "bn.js": "4.12.0"
+    "bn.js": "4.12.0",
+    "argparse": "2.0.1"
   },
   "files": [
     "./redspot.config.ts",
