--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -35,7 +35,8 @@
     "@polkadot/x-textdecoder": "7.8.2",
     "@polkadot/x-textencoder": "7.8.2",
     "@polkadot/x-randomvalues": "7.8.2",
-    "bn.js": "4.12.0"
+    "bn.js": "4.12.0",
+    "dotenv" : "10.0.0"
   },
   "files": [
     "./redspot.config.ts",
