--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -7,8 +7,10 @@
   "module": "true",
   "scripts": {
     "build": "tsc --project ./",
-    "dev": "yarn build && ts-node ./build/src/cli.js",
-    "start": "ts-node ./build/src/cli.js"
+    "dev": "yarn build && yarn setup && yarn start",
+    "start": "ts-node ./build/src/cli.js",
+    "setup" : "yarn ts-node ./build/scripts/setupdev.js",
+    "mnemonic" : "yarn build && yarn ts-node ./build/scripts/generateMnemonic.js"
   },
   "dependencies": {
     "redspot": "file:../../redspot/build/redspot-core",
