--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -9,12 +9,12 @@
     "build": "tsc --project ./",
     "dev": "yarn build && yarn setup && yarn start",
     "start": "ts-node ./build/src/cli.js",
-    "setup" : "yarn ts-node ./build/scripts/setupdev.js",
-    "mnemonic" : "yarn build && yarn ts-node ./build/scripts/generateMnemonic.js"
+    "setup": "yarn ts-node ./build/scripts/setupdev.js",
+    "mnemonic": "yarn build && yarn ts-node ./build/scripts/generateMnemonic.js"
   },
   "dependencies": {
     "redspot": "file:../../redspot/build/redspot-core",
-    "typescript": "*",
+    "typescript": "^4.2.4",
     "@redspot/chai": "file:../../redspot/build/redspot-chai",
     "@redspot/decimals": "file:../../redspot/build/redspot-decimals",
     "@redspot/explorer": "file:../../redspot/build/redspot-explorer",
@@ -27,18 +27,14 @@
     "ts-node": "^10.0.0"
   },
   "resolutions": {
-    "@polkadot/keyring": "7.8.2",
-    "@polkadot/types": "6.7.2",
-    "@polkadot/types-known": "6.7.2",
-    "@polkadot/util": "7.8.2",
-    "@polkadot/util-crypto": "7.8.2",
-    "@polkadot/x-global": "7.8.2",
-    "@polkadot/networks": "7.8.2",
-    "@polkadot/x-textdecoder": "7.8.2",
-    "@polkadot/x-textencoder": "7.8.2",
-    "@polkadot/x-randomvalues": "7.8.2",
-    "bn.js": "4.12.0",
-    "dotenv" : "10.0.0"
+    "@polkadot/api": "^6.8.1",
+    "@polkadot/api-contract": "^6.8.1",
+    "@polkadot/types": "^6.8.1",
+    "@polkadot/util": "^7.8.2",
+    "@polkadot/keyring": "^7.8.2",
+    "@polkadot/util-crypto": "^7.8.2",
+    "bn.js": "^4.12",
+    "dotenv": "10.0.0"
   },
   "files": [
     "./redspot.config.ts",
