--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -34,7 +34,8 @@
     "@polkadot/keyring": "^7.8.2",
     "@polkadot/util-crypto": "^7.8.2",
     "bn.js": "^4.12",
-    "dotenv": "10.0.0"
+    "dotenv": "10.0.0",
+    "yargs": "^17.2.1"
   },
   "files": [
     "./redspot.config.ts",
