--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -8,21 +8,21 @@
     "dev": "yarn build && yarn setup && yarn start",
     "start": "ts-node ./build/src/cli/cli.js",
     "setup": "yarn ts-node ./build/scripts/setupdev.js",
-    "mnemonic": "yarn build && yarn ts-node ./build/scripts/generateMnemonic.js",
+    "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
     "test": "npx redspot test"
   },
   "dependencies": {
-    "@redspot/chai": "file:../../redspot/build/redspot-chai",
-    "@redspot/decimals": "file:../../redspot/build/redspot-decimals",
-    "@redspot/explorer": "file:../../redspot/build/redspot-explorer",
-    "@redspot/gas-reporter": "file:../../redspot/build/redspot-gas-reporter",
-    "@redspot/known-types": "file:../../redspot/build/redspot-known-types",
-    "@redspot/patract": "file:../../redspot/build/redspot-patract",
-    "@redspot/watcher": "file:../../redspot/build/redspot-watcher",
+    "@redspot/chai": "file:../redspot/build/redspot-chai",
+    "@redspot/decimals": "file:../redspot/build/redspot-decimals",
+    "@redspot/explorer": "file:../redspot/build/redspot-explorer",
+    "@redspot/gas-reporter": "file:../redspot/build/redspot-gas-reporter",
+    "@redspot/known-types": "file:../redspot/build/redspot-known-types",
+    "@redspot/patract": "file:../redspot/build/redspot-patract",
+    "@redspot/watcher": "file:../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
-    "redspot": "file:../../redspot/build/redspot-core",
+    "redspot": "file:../redspot/build/redspot-core",
     "ts-node": "^10.0.0",
     "typescript": "^4.5.2",
     "zod": "^3.11.6"
