contract: Single signer (#30)
contract: * Move away from the concept of having a "Provider" signer. The service will run using one signer
contract: that is specified via the mnemonic in the environment. The various Provider settings such as
contract: serviceOrigin, fee, payee are now only provided via the command line. They may be added back into
contract: a config at a later date or instead specified in process.env. All actors have been removed from
contract: the Prosopo config for now.
contract: 
contract: Additionally
contract: - some contract functions have been partially added to tasks.
contract: - shortcut commands for common dev tasks have been added to package.json
contract: 
contract: * Implements getting providers accounts from storage.
contract: 
contract: * Fix Alice mnemonic
contract: 
contract: * Add dapp accounts storage function
contract: 
contract: * Version bump
contract: 
contract: * Update polkadot versions and allow database to have username and password authentication
contract: 
contract: * Redemand args
contract: 
contract: Co-authored-by: Vincenzo Ferrara <vinceferro92@gmail.com>

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -9,7 +9,10 @@
     "start": "ts-node ./build/src/cli/cli.js",
     "setup": "yarn ts-node ./build/scripts/setupdev.js",
     "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
-    "test": "npx redspot test"
+    "test": "npx redspot test",
+    "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-add_data_set" : "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
     "@redspot/chai": "file:../redspot/build/redspot-chai",
@@ -33,12 +36,12 @@
     "mocha": "8.4.0"
   },
   "resolutions": {
-    "@polkadot/api": "^6.12.1",
-    "@polkadot/api-contract": "^6.12.1",
-    "@polkadot/types": "^6.12.1",
-    "@polkadot/util": "^8.1.2",
-    "@polkadot/keyring": "^8.1.2",
-    "@polkadot/util-crypto": "^8.1.2",
+    "@polkadot/api": "^7.0.2",
+    "@polkadot/api-contract": "^7.0.2",
+    "@polkadot/types": "^7.0.2",
+    "@polkadot/util": "^8.2.2",
+    "@polkadot/keyring": "^8.2.2",
+    "@polkadot/util-crypto": "^8.2.2",
     "@types/yargs": "^17.0.6",
     "bn.js": "^4.12",
     "dotenv": "8.0.0",
