contract: Dev setup (#34)
contract: * WIP - Updating dev setup to register provider, dapp and commit solutions from dapp user
contract: 
contract: * Automating dapp user commit in dev setup
contract: 
contract: * Approve or disapprove commitment
contract: 
contract: * Downgrade polkadot version. Add comments to dev setup. Add commitment getter to dev setup
contract: 
contract: * Dependencies and config
contract: 
contract: * Correct import in codec and bump versions
contract: 
contract: * Remove provider stake and replace with provider update

--- a/packages/contract/tsconfig.json
+++ b/packages/contract/tsconfig.json
@@ -1,6 +1,7 @@
 {
 
     "compilerOptions": {
+        "types": ["node"],
         "target": "ES2019",
         "module": "commonjs",
         "rootDir": "./",
