--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,7 +12,7 @@
     "test": "npx redspot test",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
-    "dev-provider-add_data_set" : "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
+    "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
     "@redspot/chai": "file:../redspot/build/redspot-chai",
@@ -33,19 +33,25 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "chai": "^4.3.4",
-    "mocha": "8.4.0"
+    "mocha": "8.4.0",
+    "@types/node": "^17.0.8"
   },
   "resolutions": {
-    "@polkadot/api": "^7.0.2",
-    "@polkadot/api-contract": "^7.0.2",
-    "@polkadot/types": "^7.0.2",
+    "@polkadot/api": "7.2.1",
+    "@polkadot/api-contract": "7.2.1",
+    "@polkadot/types": "7.2.1",
+    "@polkadot/types-known": "7.2.1",
+    "@polkadot/keyring": "8.2.2",
     "@polkadot/util": "^8.2.2",
-    "@polkadot/keyring": "^8.2.2",
+    "@polkadot/wasm-crypto": "4.5.1",
     "@polkadot/util-crypto": "^8.2.2",
+
+
+    "typescript": "4.5.4",
     "@types/yargs": "^17.0.6",
     "bn.js": "^4.12",
     "dotenv": "8.0.0",
-    "yargs": "^17.2.1",
+    "yargs": "^17.3.1",
     "mocha": "8.4.0"
   },
   "files": [
