--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/node": "^17.0.8",
     "chai": "^4.3.4",
-    "mocha": "8.4.0",
-    "@types/node": "^17.0.8"
+    "mocha": "8.4.0"
   },
   "resolutions": {
     "@polkadot/api": "7.2.1",
@@ -42,11 +42,9 @@
     "@polkadot/types": "7.2.1",
     "@polkadot/types-known": "7.2.1",
     "@polkadot/keyring": "8.2.2",
-    "@polkadot/util": "^8.2.2",
+    "@polkadot/util": "8.2.2",
     "@polkadot/wasm-crypto": "4.5.1",
-    "@polkadot/util-crypto": "^8.2.2",
-
-
+    "@polkadot/util-crypto": "8.2.2",
     "typescript": "4.5.4",
     "@types/yargs": "^17.0.6",
     "bn.js": "^4.12",
