contract: Captcha solutions (#41)
contract: * WIP
contract: 
contract: * Allow Dapp User to send captcha solutions via API to Provider
contract: 
contract: * Be stricter with captcha types. Move computation of captcha hashes out of merkle class. Store captcha solutions, not captchas, in db when solution received from user
contract: 
contract: * captcha solution tests
contract: 
contract: * Dapp User sending invalid captcha id causes error
contract: 
contract: * Further checks for dapp user submitting solution
contract: 
contract: * Get 5 captcha solution tests working
contract: 
contract: * More unit tests
contract: 
contract: * remove onlys
contract: 
contract: * Cache captcha solution responses
contract: 
contract: * More tests, trying to get mocked db to play with real contract. WIP
contract: 
contract: * Basic working unit tests with live contract and mocked DB

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node ./build/src/cli/cli.js",
     "setup": "yarn ts-node ./build/scripts/setupdev.js",
     "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
-    "test": "npx redspot test",
+    "test": "yarn redspot test",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
@@ -23,6 +23,8 @@
     "@redspot/patract": "file:../redspot/build/redspot-patract",
     "@redspot/watcher": "file:../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
+    "c8": "^7.11.0",
+    "chai-as-promised": "^7.1.1",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "redspot": "file:../redspot/build/redspot-core",
