--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -22,9 +22,16 @@
     "@redspot/known-types": "file:../redspot/build/redspot-known-types",
     "@redspot/patract": "file:../redspot/build/redspot-patract",
     "@redspot/watcher": "file:../redspot/build/redspot-watcher",
+    "@rushstack/eslint-patch": "^1.0.6",
     "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "c8": "^7.11.0",
     "chai-as-promised": "^7.1.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "redspot": "file:../redspot/build/redspot-core",
@@ -36,6 +43,11 @@
     "@types/chai": "^4.2.14",
     "@types/node": "^17.0.8",
     "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "8.4.0"
   },
   "resolutions": {
