--- a/demos/dapp-example/package.json
+++ b/demos/dapp-example/package.json
@@ -5,13 +5,13 @@
     "node": ">=14.x"
   },
   "resolutions": {
-    "@polkadot/api": "7.2.1",
-    "@polkadot/api-contract": "7.2.1",
-    "@polkadot/types": "7.2.1",
-    "@polkadot/keyring": "8.2.2",
-    "@polkadot/util": "8.2.2",
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/util": "8.3.3",
     "@polkadot/wasm-crypto": "4.5.1",
-    "@polkadot/util-crypto": "8.2.2",
+    "@polkadot/util-crypto": "8.3.3",
     "typescript": "4.5.4"
   },
   "dependencies": {
@@ -39,5 +39,8 @@
   "main": "index.js",
   "repository": "ssh://git@github.com:prosopo-io/protocol.git",
   "author": "Prosopo",
-  "license": "GPLv3"
+  "license": "GPLv3",
+  "devDependencies": {
+    "ts-node": "^10.4.0"
+  }
 }
