--- a/demos/dapp-example/contracts/Cargo.toml
+++ b/demos/dapp-example/contracts/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "dapp"
-version = "3.0.0-rc7"
+version = "3.0.0-rc8"
 authors = ["Chris Taylor chris@prosopo.io"]
 edition = "2021"
 resolver = "2"
 
 [dependencies]
-ink_primitives = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
-ink_metadata = { git =  "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false, features = ["derive"], optional = true }
-ink_env = { git =  "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
-ink_storage = { git =  "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
-ink_lang = { git =  "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
-ink_prelude = { git =  "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
+ink_primitives = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false }
+ink_metadata = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false, features = ["derive"], optional = true }
+ink_env = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false }
+ink_storage = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false }
+ink_lang = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false }
+ink_prelude = { git = "https://github.com/prosopo-io/ink", branch = "enum_spread_allocate", default-features = false }
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
-prosopo = { version = "3.0.0-rc7", git ="https://github.com/prosopo-io/protocol", default-features = false, features = ["ink-as-dependency"] }
+prosopo = { version = "3.0.0-rc8", git = "https://github.com/prosopo-io/protocol", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
 name = "dapp"
