--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -36,13 +36,14 @@
     "mongodb": "^4.1.4",
     "redspot": "file:../redspot/build/redspot-core",
     "ts-node": "^10.0.0",
-    "typescript": "^4.5.2",
+    "typescript": "^4.5.4",
     "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/node": "^17.0.8",
     "chai": "^4.3.4",
+    "dotenv": "8.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-standard": "^16.0.3",
