--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -37,7 +37,7 @@
     "@types/chai": "^4.2.14",
     "@types/node": "^17.0.8",
     "chai": "^4.3.4",
-    "dotenv": "8.0.0",
+    "dotenv": "^14.3.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-standard": "^16.0.3",
@@ -63,7 +63,7 @@
     "@polkadot/util-crypto": "8.3.3",
     "@types/yargs": "^17.0.6",
     "bn.js": "^4.12",
-    "dotenv": "8.0.0",
+    "dotenv": "^14.3.2",
     "yargs": "^17.3.1",
     "mocha": "8.4.0"
   },
