contract: Breaking down tsconfigs

--- a/packages/contract/packages/core/package.json
+++ b/packages/contract/packages/core/package.json
@@ -5,17 +5,18 @@
   "module": "true",
   "private": true,
   "scripts": {
-    "build": "tsc --project ./",
+    "build": "tsc --build ./",
     "dev": "yarn build && yarn setup && yarn start",
-    "start": "ts-node ./build/src/cli/cli.js",
-    "setup": "yarn ts-node ./build/scripts/setupdev.js",
-    "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
+    "start": "ts-node ../../build/src/cli/cli.js",
+    "setup": "yarn ts-node ../../build/scripts/setupdev.js",
+    "mnemonic": "yarn ts-node ../../build/scripts/generateMnemonic.ts",
     "test": "yarn redspot test",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
+    "@prosopo/contract": "1.0.0",
     "@redspot/chai": "file:../../../redspot/build/redspot-chai",
     "@redspot/decimals": "file:../../../redspot/build/redspot-decimals",
     "@redspot/explorer": "file:../../../redspot/build/redspot-explorer",
@@ -23,7 +24,6 @@
     "@redspot/known-types": "file:../../../redspot/build/redspot-known-types",
     "@redspot/patract": "file:../../../redspot/build/redspot-patract",
     "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
-    "@prosopo/contract": "*",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
     "chai-as-promised": "^7.1.1",
@@ -32,26 +32,26 @@
     "mongodb": "^4.1.4",
     "redspot": "file:../../../redspot/build/redspot-core",
     "ts-node": "^10.0.0",
-    "typescript": "^4.5.4",
+    "typescript": "^4.5.5",
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.0.6",
     "@types/chai": "^4.2.14",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.4",
     "dotenv": "^14.3.2",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "@rushstack/eslint-patch": "^1.0.6",
     "mocha": "8.4.0"
   },
   "resolutions": {
