--- a/packages/contract/packages/contract/package.json
+++ b/packages/contract/packages/contract/package.json
@@ -8,10 +8,17 @@
   "type": "commonjs",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc --project ./"
-
+    "build": "tsc --build ./"
   },
   "dependencies": {
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/types-known": "7.5.1",
+    "@polkadot/util": "8.3.3",
+    "@polkadot/util-crypto": "8.3.3",
+    "@polkadot/wasm-crypto": "4.5.1",
     "@redspot/chai": "file:../../../redspot/build/redspot-chai",
     "@redspot/decimals": "file:../../../redspot/build/redspot-decimals",
     "@redspot/explorer": "file:../../../redspot/build/redspot-explorer",
@@ -19,15 +26,8 @@
     "@redspot/known-types": "file:../../../redspot/build/redspot-known-types",
     "@redspot/patract": "file:../../../redspot/build/redspot-patract",
     "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
-    "@polkadot/api": "7.5.1",
-    "@polkadot/api-contract": "7.5.1",
-    "@polkadot/types": "7.5.1",
-    "@polkadot/types-known": "7.5.1",
-    "@polkadot/keyring": "8.3.3",
-    "@polkadot/util": "8.3.3",
-    "@polkadot/wasm-crypto": "4.5.1",
-    "@polkadot/util-crypto": "8.3.3",
     "redspot": "file:../../../redspot/build/redspot-core",
+    "typescript": "^4.5.5",
     "zod": "^3.11.6"
   },
   "devDependencies": {
