--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -35,7 +35,7 @@
 
 
     /* Basic Options */
-    "target": "esnext",
+    "target": "ES2019",
     /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "esnext",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
