--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "stableVersion": "1.0.0",
   "author": "Prosopo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prosopo-io/provider.git"
+  },
+  "type": "module",
   "private": true,
   "engines": {
     "node": ">=8.2.0"
