--- a/packages/contract/packages/core/package.json
+++ b/packages/contract/packages/core/package.json
@@ -2,14 +2,14 @@
   "name": "@prosopo/provider-core",
   "version": "1.0.0",
   "author": "Prosopo",
-  "module": "true",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "tsc --build ./",
     "dev": "yarn build && yarn setup && yarn start",
-    "start": "ts-node ../../build/src/cli/cli.js",
-    "setup": "yarn ts-node ../../build/scripts/setupdev.js",
-    "mnemonic": "yarn ts-node ../../build/scripts/generateMnemonic.ts",
+    "start": "node ../../build/src/cli/cli.js",
+    "setup": "node ../../build/scripts/setupdev.js",
+    "mnemonic": "node ../../build/scripts/generateMnemonic.js",
     "test": "yarn redspot test",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
