--- a/packages/contract/packages/contract/package.json
+++ b/packages/contract/packages/contract/package.json
@@ -22,14 +22,14 @@
     "@polkadot/util": "8.3.3",
     "@polkadot/util-crypto": "8.3.3",
     "@polkadot/wasm-crypto": "4.5.1",
-    "@redspot/chai": "file:../../../redspot/build/redspot-chai",
-    "@redspot/decimals": "file:../../../redspot/build/redspot-decimals",
-    "@redspot/explorer": "file:../../../redspot/build/redspot-explorer",
-    "@redspot/gas-reporter": "file:../../../redspot/build/redspot-gas-reporter",
-    "@redspot/known-types": "file:../../../redspot/build/redspot-known-types",
-    "@redspot/patract": "file:../../../redspot/build/redspot-patract",
-    "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
-    "redspot": "file:../../../redspot/build/redspot-core",
+    "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
+    "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
+    "@redspot/explorer": "file:../../../../redspot/build/redspot-explorer",
+    "@redspot/gas-reporter": "file:../../../../redspot/build/redspot-gas-reporter",
+    "@redspot/known-types": "file:../../../../redspot/build/redspot-known-types",
+    "@redspot/patract": "file:../../../../redspot/build/redspot-patract",
+    "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
+    "redspot": "file:../../../../redspot/build/redspot-core",
     "zod": "^3.11.6"
   },
   "devDependencies": {
