--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -16,7 +16,6 @@
     "packages/core"
   ],
   "scripts": {
-    "build": "yarn tsc -b --verbose",
     "dev": "yarn build && yarn setup && yarn start",
     "start": "ts-node ./packages/core/src/cli/cli.ts",
     "setup": "ts-node ./packages/core/scripts/setupdev.ts",
@@ -26,51 +25,5 @@
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
-  "packageManager": "yarn@3.1.1",
-  "resolutions": {
-    "typescript": "^4.5.5",
-    "@polkadot/api": "7.5.1",
-    "@polkadot/api-contract": "7.5.1",
-    "@polkadot/types": "7.5.1",
-    "@polkadot/types-known": "7.5.1",
-    "@polkadot/keyring": "8.3.3",
-    "@polkadot/util": "8.3.3",
-    "@polkadot/wasm-crypto": "4.5.1",
-    "@polkadot/util-crypto": "8.3.3",
-    "@types/yargs": "^17.0.6",
-    "bn.js": "^4.12",
-    "dotenv": "^14.3.2",
-    "yargs": "^17.3.1",
-    "mocha": "8.4.0"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.0.6",
-    "@types/chai": "^4.2.14",
-    "@types/express": "^4.17.13",
-    "@types/find-up": "^4.0.0",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "chai": "^4.3.4",
-    "dotenv": "^14.3.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-import-newlines": "^1.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "mocha": "8.4.0",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
-  }
+  "packageManager": "yarn@3.2.0"
 }
