--- a/packages/contract/packages/contract/package.json
+++ b/packages/contract/packages/contract/package.json
@@ -4,7 +4,7 @@
   "license": "GPL-3.0",
   "packageManager": "yarn@3.2.0",
   "version": "0.0.0",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
   "engines": {
     "node": ">=14.0.0"
   },
@@ -12,13 +12,13 @@
     "build": "yarn tsc -b . --verbose"
   },
   "dependencies": {
-    "@polkadot/api": "7.5.1",
-    "@polkadot/api-contract": "7.5.1",
-    "@polkadot/keyring": "8.3.3",
-    "@polkadot/types": "7.5.1",
-    "@polkadot/types-known": "7.5.1",
-    "@polkadot/util": "8.3.3",
-    "@polkadot/util-crypto": "8.3.3",
+    "@polkadot/api": "7.11.1",
+    "@polkadot/api-contract": "7.11.1",
+    "@polkadot/keyring": "8.4.1",
+    "@polkadot/types": "7.11.1",
+    "@polkadot/types-known": "7.11.1",
+    "@polkadot/util": "8.4.1",
+    "@polkadot/util-crypto": "8.4.1",
     "@polkadot/wasm-crypto": "4.5.1",
     "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
     "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
