--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -11,6 +11,20 @@
   "engines": {
     "node": ">=8.2.0"
   },
+  "resolutions": {
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/api-derive": "7.5.1",
+    "@polkadot/api-augment": "7.5.1",
+    "@polkadot/apps-config": "0.103.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/networks": "8.3.3",
+    "@polkadot/util": "8.3.3",
+    "@polkadot/x-fetch": "8.3.3",
+    "@polkadot/util-crypto": "8.3.3",
+    "rxjs": "7.5.2"
+  },
   "workspaces": [
     "packages/contract",
     "packages/core"
