--- a/packages/contract/packages/core/tsconfig.json
+++ b/packages/contract/packages/core/tsconfig.json
@@ -14,6 +14,7 @@
     "outDir": "./build",
     "esModuleInterop": true,
     "strict": true,
+    "strictNullChecks": true,
     "skipLibCheck": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
